[gd_scene load_steps=15 format=2]

[ext_resource path="res://inst/scenes/game_scene/game_state.gd" type="Script" id=1]
[ext_resource path="res://resources/fonts/LCD_Solid.fnt" type="BitmapFont" id=2]
[ext_resource path="res://inst/scenes/basic_scene/held_item_texture.gd" type="Script" id=3]
[ext_resource path="res://resources/main_theme.tres" type="Theme" id=4]
[ext_resource path="res://inst/scenes/basic_scene/health_bar.gd" type="Script" id=5]
[ext_resource path="res://inst/scenes/game_scene/interact_component.gd" type="Script" id=6]
[ext_resource path="res://inst/scenes/basic_scene/health_component.gd" type="Script" id=7]
[ext_resource path="res://resources/textures/interact.png" type="Texture" id=8]
[ext_resource path="res://inst/entities/behaviors/player_behavior/player_behavior.tscn" type="PackedScene" id=9]
[ext_resource path="res://inst/entities/physics_bodies/knight/knight.tscn" type="PackedScene" id=10]
[ext_resource path="res://inst/zones/a/zone_a.tscn" type="PackedScene" id=11]
[ext_resource path="res://inst/entities/physics_bodies/man/man.tscn" type="PackedScene" id=12]

[sub_resource type="Animation" id=1]
resource_name = "hide"
length = 0.2
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.175 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.025, 0.05, 0.075, 0.1, 0.125, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14 ]
}

[sub_resource type="Animation" id=2]
resource_name = "reveal"
length = 0.2
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.025, 0.05, 0.075, 0.1, 0.125, 0.15, 0.175 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[node name="GameState" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="StatusMarginContainer" type="MarginContainer" parent="HUD"]
margin_right = 4.0
margin_bottom = 4.0
custom_constants/margin_top = 4
custom_constants/margin_left = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="HUD/StatusMarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 128.0
margin_bottom = 16.0
rect_min_size = Vector2( 124, 12 )
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 2 )
max_value = 99.0
step = 1.0
value = 99.0
allow_greater = true
percent_visible = false
script = ExtResource( 5 )

[node name="ItemMarginContainer" type="MarginContainer" parent="HUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -60.0
margin_right = 60.0
grow_vertical = 0
rect_min_size = Vector2( 60, 60 )
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="HUD/ItemMarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 56.0
margin_bottom = 56.0
grow_vertical = 0
theme = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="HUD/ItemMarginContainer/PanelContainer"]
margin_right = 52.0
margin_bottom = 52.0
grow_vertical = 0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="CenterContainer" type="CenterContainer" parent="HUD/ItemMarginContainer/PanelContainer/MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 50.0
margin_bottom = 50.0
grow_vertical = 0
rect_min_size = Vector2( 48, 48 )

[node name="TextureRect" type="TextureRect" parent="HUD/ItemMarginContainer/PanelContainer/MarginContainer/CenterContainer"]
margin_left = 24.0
margin_top = 24.0
margin_right = 24.0
margin_bottom = 24.0
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 200, 200 )
current = true

[node name="Zones" type="Node2D" parent="."]

[node name="ZoneA" parent="Zones" instance=ExtResource( 11 )]

[node name="Entities" type="Node2D" parent="."]

[node name="Knight" parent="Entities" instance=ExtResource( 10 )]
position = Vector2( 200, 200 )
configuration_path = "res://data/entities/knight.json"

[node name="Man" parent="Entities" instance=ExtResource( 12 )]
position = Vector2( 154, 216 )
configuration_path = "res://data/entities/man.json"

[node name="BehaviorTree" parent="Entities/Man" instance=ExtResource( 9 )]

[node name="Health" type="Node" parent="Entities/Man"]
script = ExtResource( 7 )
health = 100

[node name="Interact" type="Node2D" parent="Entities/Man"]
position = Vector2( 46, -16 )
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="Entities/Man/Interact"]
visible = false
position = Vector2( -4, -29 )
texture = ExtResource( 8 )
centered = false
hframes = 15
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="Entities/Man/Interact"]
anims/hide = SubResource( 1 )
anims/reveal = SubResource( 2 )
